--- a/GLOBAL.css
+++ b/GLOBAL.css
@@ -75,11 +75,14 @@ section.block-container { display: flex; min-height: 500px; }
     flex-direction: column;
     justify-content: center;
 }
-.block-text h2 { font-family: var(--font-title); font-size: 2.5rem; margin-bottom: 1.5rem; }
+.block-text h2 { font-family: var(--font-title); font-size: 3.5rem; margin-bottom: 1.5rem; }
 .block-text.dark { background-color: var(--bg-dark); color: var(--bg-beige); }
-.block-text.beige { background-color: var(--bg-beige); color: var(--text-dark); }
+.block-text.beige { background-color: var(--bg-beige); color: var(--text-dark);margin-left: 110px; }
 
-.block-img { flex: 1; }
+.block-img {
+    max-height: 900px;
+    max-width: 600px;
+}    
 
 /* --- 5. PAGES SPÉCIFIQUES --- */
 
